--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,26 @@
 
 /* signal-trend-card max-width based on flexBasis: 420px (26.25rem) */
 @media(min-width: 888px){
-  .signal-trend-card{
+  .listing .signal-trend-card{
     max-width: calc(50% - 1rem);
   }
 }
 @media(min-width: 1312px){
-  .signal-trend-card{
+  .listing .signal-trend-card{
     max-width: calc(33.3% - 1rem);
   }
 }
 @media(min-width: 1760px){
-  .signal-trend-card{
+  .listing .signal-trend-card{
     max-width: calc(25% - 1rem);
   }
 }
 @media(min-width: 2196px){
-  .signal-trend-card{
+  .listing .signal-trend-card{
     max-width: calc(20% - 1rem);
   }
 }
-.connected .signal-trend-card{
-  max-width: none;
+.home .signal-trend-card {
+  flex-basis: 21rem !important;
+  flex-shrink: 1;
 }
