--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@
   text-decoration: none;
   background-color: var(--gray-200);
   align-items: stretch;
+  display: flex;
 }
 
 @media(min-width: 888px){
